[package]
name = "rust_os"
version = "0.1.0"
authors = ["Josiah A. Roelfsema <jaroelfsema@gmail.com>"]
edition = "2018"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33         # (0x10 << 1) | 1

[dependencies]
rlibc = "1.0.0"
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.11.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# the profile used for `cargo build`
[profile.dev]
### panic = "abort" # disable stack unwinding on panic
### the above was commented as a workaround to a "cargo" bug

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
